# pid-extractor-v2

./: .gitignore  pyproject.toml  requirements.txt
config/: settings.py
config/drawing_families/: gas_flotation_tank.yaml
pid_extraction/: exceptions.py  logging_config.py
pid_extraction/components/c1_preprocessing/: enhance.py  family_template.py  preprocessor.py  rasterize.py  segment.py
pid_extraction/components/c2_extraction/: extractor.py  parsing.py
pid_extraction/components/c2_extraction/clients/: base.py  qwen_client.py
pid_extraction/components/c2_extraction/prompts/: context_header.txt  system_extractor.txt  task_extraction.txt  task_self_review.txt
pid_extraction/components/c3_validation/: ocr_corrections.py  report.py  validator.py
pid_extraction/components/c3_validation/rules/: base.py  dedupe.py  loops.py  schema.py  statistics.py  topology.py
pid_extraction/components/c4_routing/: __init__.py  feedback.py  final_emitter.py  priority.py  queue_manager.py  router.py
pid_extraction/models/: extraction.py  region.py  review.py  validation.py
pid_extraction/storage/: artifact_store.py
scripts/: run_pipeline.py
streamlit_ui/: review_app.py
streamlit_ui/pages/: 0_Upload_Process.py  1_Queue.py  2_Review.py  3_Drawing_Summary.py
